--- a/src/public/content/posts/2021-04-09-emacs-d.md
+++ b/src/public/content/posts/2021-04-09-emacs-d.md
@@ -1,20 +1,20 @@
-\* TL;DR\* This post describes an approach to make byte compiler and various linters happy and **useful** in your `.emacs.d`, while maintaining startup performance, the ability to write embedded packages and test them. This is going to be a long post, so grab a bottle of wine, snacks and follow me. In case you lack these things, just take a look at results.
+****TL;DR:**** This post describes an approach to make the byte compiler and various linters happy and **useful** in your `.emacs.d`, whilst maintaining startup performance, the ability to write embedded packages, and test them. This is going to be a long post, so grab a bottle of wine, some snacks, and follow me. In case you lack these things, just take a look at the results.
 
-The longest project in my life is [environment](https://github.com/d12frosted/environment), it started with [Emacs configurations](https://github.com/d12frosted/environment/tree/master/emacs) - personal frustration and my biggest time ~~waster~~ investment. I might be masochistic, but I never felt sorry for falling into this ~~trap~~ world. And boy, sometimes it is painful to maintain something in this ever-mutating and dynamic system.
+The longest project in my life is [environment](https://github.com/d12frosted/environment), which started with [Emacs configurations](https://github.com/d12frosted/environment/tree/master/emacs) - a personal frustration and my biggest time waster investment. I might be masochistic, but I've never felt sorry for falling into this trap world. And boy, sometimes it's painful to maintain something in this ever-mutating and dynamic system.
 
-There are various tools to help maintaining Emacs package, all fall into one of four categories - project management tools (e.g. [Cask](https://cask.readthedocs.io/en/latest/), [doublep/eldev](https://github.com/doublep/eldev/), [alphapapa/makem.sh](https://github.com/alphapapa/makem.sh)), compiler (e.g. built-in byte compiler), linters (e.g. [purcell/package-lint](https://github.com/purcell/package-lint), [mattiase/relint](https://github.com/mattiase/relint), [gonewest818/elisp-lint](https://github.com/gonewest818/elisp-lint/), [emacs-elsa/Elsa](https://github.com/emacs-elsa/Elsa)) and test frameworks (e.g. [ERT](https://www.gnu.org/software/emacs/manual/html_node/ert/index.html), [jorgenschaefer/emacs-buttercup](https://github.com/jorgenschaefer/emacs-buttercup)). The tricky part comes when you want to use them for maintaining your own Emacs configurations, as they have different requirements compared to regular Emacs packages. At least in my case, they do.
+There are various tools to help maintain Emacs packages, all of which fall into one of four categories: project management tools (e.g. [Cask](https://cask.readthedocs.io/en/latest/), [doublep/eldev](https://github.com/doublep/eldev/), [alphapapa/makem.sh](https://github.com/alphapapa/makem.sh)), compilers (e.g. the built-in byte compiler), linters (e.g. [purcell/package-lint](https://github.com/purcell/package-lint), [mattiase/relint](https://github.com/mattiase/relint), [gonewest818/elisp-lint](https://github.com/gonewest818/elisp-lint/), [emacs-elsa/Elsa](https://github.com/emacs-elsa/Elsa)), and test frameworks (e.g. [ERT](https://www.gnu.org/software/emacs/manual/html_node/ert/index.html), [jorgenschaefer/emacs-buttercup](https://github.com/jorgenschaefer/emacs-buttercup)). The tricky part comes when you want to use them for maintaining your own Emacs configurations, as they have different requirements compared to regular Emacs packages. At least in my case, they do.
 
-First of all, I want Emacs to start as quickly as possible (e.g. in less than a second), meaning that I need to use tools like `use-package` for deferred loading. So I can't `require` most of the packages directly except those that are used in the bootstrapping process. This easily makes compiler sad.
+First, I want Emacs to start as quickly as possible (e.g. in less than a second), meaning that I need to use tools like `use-package` for deferred loading. So I can't `require` most packages directly, except those used in the bootstrapping process. This easily makes the compiler sad.
 
-Secondly, I have lots of additional functions extending or combining functionality of one or more packages. But I hate to define them inside `use-packge` macro. Aside from aesthetics, I want to retain functionality of `xref-find-definitions`. Having definitions outside of `use-package` means that I will get many false byte compiler warnings and errors. Which is not helpful!
+Secondly, I have lots of additional functions extending or combining the functionality of one or more packages. But I hate defining them inside the `use-package` macro. Aside from aesthetics, I want to retain the functionality of `xref-find-definitions`. Having definitions outside of `use-package` means that I'll get many false byte compiler warnings and errors, which is not helpful!
 
-Thirdly, bootstrap process is different as project management tools isolate your package development from your Emacs configurations, which makes sense in general, but doesn't make sense when you develop the aforementioned configurations.
+Thirdly, the bootstrap process is different, as project management tools isolate your package development from your Emacs configurations. This makes sense in general but doesn't make sense when you're developing the aforementioned configurations.
 
 The closest approach I know about is [hlissner/doom-emacs](https://github.com/hlissner/doom-emacs), but even there `.emacs.d` is [ignored](https://github.com/hlissner/doom-emacs/blob/46dedb3e3361535052d199e994b641dca2c2cffd/modules/lang/emacs-lisp/config.el#L14) by compiler. Let me just quote a docstring from there:
 
 > This checker (flycheck) tends to produce a lot of false positives in your .emacs.d and private config, so it is mostly useless there. However, special hacks are employed so that flycheck still does **some** helpful linting.
 
-But it's Emacs, right? Everything is possible! So let's find a way to make byte compiler and linters helpful and enable testing of Emacs configurations.
+But it's Emacs, right? Everything is possible! So let's find a way to make the byte compiler and linters helpful whilst enabling testing of Emacs configurations.
 
 <div class="d12-images-block-[100%]">
 
@@ -26,7 +26,7 @@ But it's Emacs, right? Everything is possible! So let's find a way to make byte 
 
 <!--more-->
 
-Before we dive too much into details, let me describe the solution from higher level.
+Before we dive into too much detail, let me describe the solution from a higher level.
 
 - [doublep/eldev](https://github.com/doublep/eldev/) is a project management tool because it's powerful and extensible.
 - [raxod502/straight.el](https://github.com/raxod502/straight.el) is a package management tool because it's consistent and reliable.
@@ -74,13 +74,13 @@ The structure of my `.emacs.d` looks like this:
 └── └── lib-zzz-test.el
 ```
 
-As you can see, all lisp files are located inside of `lisp` directory (you should not put them on the same level as `init.el` file as that directory can't be part of `load-path`), and all tests are located inside of `test` directory.
+As you can see, all Lisp files are located inside the `lisp` directory (you shouldn't put them on the same level as the `init.el` file, as that directory can't be part of `load-path`), and all tests are located inside the `test` directory.
 
 The following naming convention is used.
 
-- `init-xxx` is a file lazily initializing `xxx` feature, it can be a programming language (e.g. `init-haskell`) or a feature (e.g. `init-project`)
-  - this is the only file type describing what packages to install, how to initialize and configure them;
-  - it is safe to require these files, as they should defer any loading as much as possible;
+- `init-xxx` is a file lazily initializing the `xxx` feature - it can be a programming language (e.g. `init-haskell`) or a feature (e.g. `init-project`)
+  - this is the only file type describing which packages to install and how to initialise and configure them;
+  - it's safe to require these files, as they should defer any loading as much as possible;
 - `lib-xxx` is a file containing various utilities depending on packages defined in `init-xxx` file
   - these files are loaded via autoloads, and they should never be required directly;
   - these files can safely `require` any packages defined in `init-xxx` to help linter and byte compiler;
@@ -91,14 +91,14 @@ The following naming convention is used.
     - [lib-vulpea-refile.el](https://github.com/d12frosted/environment/blob/6ffa964e77410b71058c3d1c43a2381a90bbc6aa/emacs/lisp/lib-vulpea-refile.el)
     - [lib-vulpea-id.el](https://github.com/d12frosted/environment/blob/6ffa964e77410b71058c3d1c43a2381a90bbc6aa/emacs/lisp/lib-vulpea-id.el)
     - [lib-vulpea.el](https://github.com/d12frosted/environment/blob/6ffa964e77410b71058c3d1c43a2381a90bbc6aa/emacs/lisp/lib-vulpea.el)
-- `config-xxx` is a file containing variables and constants required by both `init-xxx` and `lib-xxx` files, allowing to avoid circular dependencies;
-  - as they do not load any packages, it is safe to require this file from any other file;
+- `config-xxx` is a file containing variables and constants required by both `init-xxx` and `lib-xxx` files, allowing you to avoid circular dependencies;
+  - as they don't load any packages, it's safe to require this file from any other file;
 
 The only exception from this convention is `init-autoloads.el` file containing autoloads. Name comes from `init.el` file.
 
 # Content of `early-init`
 
-See [relevant section](https://www.gnu.org/software/emacs/manual/html_node/emacs/Early-Init-File.html) in Emacs Help for more information on The Early Init File, introduced in Emacs 27.1. Basically, this file is great for frame customizations. In my case I love to disable as much clutter as possible:
+See the [relevant section](https://www.gnu.org/software/emacs/manual/html_node/emacs/Early-Init-File.html) in Emacs Help for more information on The Early Init File, introduced in Emacs 27.1. Basically, this file is great for frame customisations. In my case, I like to disable as much clutter as possible:
 
 ``` commonlisp
 (add-to-list 'default-frame-alist '(tool-bar-lines . 0))
@@ -106,7 +106,7 @@ See [relevant section](https://www.gnu.org/software/emacs/manual/html_node/emacs
 (add-to-list 'default-frame-alist '(vertical-scroll-bars))
 ```
 
-This file is totally optional, you can safely omit it in your setup. But if you have any frame customization, putting them in `early-init` file might speed up your Emacs and fix some visual clutter upon startup.
+This file is totally optional - you can safely omit it in your setup. But if you have any frame customisations, putting them in the `early-init` file might speed up your Emacs and fix some visual clutter upon startup.
 
 # Content of `init.el`
 
@@ -155,11 +155,11 @@ In addition it is a good idea to use [emacsmirror/gcmh](https://github.com/emacs
 (require 'init-elpa)
 ```
 
-Literally, that's it. Checkout content of to find out how it works.
+Literally, that's it. Check out the content of to find out how it works.
 
-## Setup `custom-file` location
+## Set up `custom-file` location
 
-Before we load anything, we should setup location of our `custom-file`, otherwise Emacs customization system will pollute our `init.el` file.
+Before we load anything, we should set up the location of our `custom-file`; otherwise, the Emacs customisation system will pollute our `init.el` file.
 
 ``` commonlisp
 (setq custom-file (concat path-local-dir "custom.el"))
@@ -241,7 +241,7 @@ Part of our bootstrap process is setting up package management and package confi
 
 ## Bootstrap `straight.el`
 
-The bootstrap process of [raxod502/straight.el](https://github.com/raxod502/straight.el) is quire simple and well documented in the official repository. Additionally, we want to avoid any modification checks at startup by setting the value of `straight-check-for-modifications` to `nil`, so everything runs faster. Also we want to install packages by default in `use-package` forms. And then everything is straight-forward.
+The bootstrap process of [raxod502/straight.el](https://github.com/raxod502/straight.el) is quite simple and well documented in the official repository. Additionally, we want to avoid any modification checks at startup by setting the value of `straight-check-for-modifications` to `nil`, so everything runs faster. We also want to install packages by default in `use-package` forms. And then everything is straightforward.
 
 ``` commonlisp
 (require 'config-path)
@@ -269,11 +269,11 @@ The bootstrap process of [raxod502/straight.el](https://github.com/raxod502/stra
   (load bootstrap-file nil 'nomessage))
 ```
 
-The only bit I am not describing here is how I configure [retries for networking operations](/posts/2021-04-08-straight-el-retries).
+The only bit I'm not describing here is how I configure [retries for networking operations](/posts/2021-04-08-straight-el-retries).
 
-## Setup `use-package`
+## Set up `use-package`
 
-Now it's easy to setup `use-package`:
+Now it's easy to set up `use-package`:
 
 ``` commonlisp
 (setq-default
@@ -313,7 +313,7 @@ Eldev is quite powerful when it comes to fileset specification, but I find it no
 
 ## Use MELPA
 
-We are going to use certain 3rd party packages for project management (e.g. testing and linting), so we must tell Eldev where to load them from. This part is a little bit confusing as Eldev will install packages from MELPA and for our configurations we are going to use `straight.el`. But Eldev isolates these packages in it's working dir and they will not interfere with our configurations. Ugly, but safe.
+We're going to use certain third-party packages for project management (e.g. testing and linting), so we must tell Eldev where to load them from. This part is slightly confusing, as Eldev will install packages from MELPA, and for our configurations we're going to use `straight.el`. But Eldev isolates these packages in its working directory, and they won't interfere with our configurations. Ugly, but safe.
 
 ``` commonlisp
 ;; There are dependencies for testing and linting phases, they should
@@ -373,7 +373,7 @@ Upgrade flow is simple and uses `straight.el` functionality, because we use it t
 
 ## Define autoloads plugin
 
-Now is the most dirty part - autoloads generation. Eldev provides a plugin for autoloads generation, but unfortunately it works only with root directory, but we need to generate our autoloads for files in `lisp` directory. So we write our own plugin.
+Now comes the dirtiest part - autoloads generation. Eldev provides a plugin for autoloads generation, but unfortunately it only works with the root directory. We need to generate our autoloads for files in the `lisp` directory, so we write our own plugin.
 
 ``` commonlisp
 ;; We want to generate autoloads file. This line simply loads few
@@ -439,7 +439,7 @@ And again, we need to tell Eldev which files to lint.
 (advice-add 'eldev-lint-find-files :around #'eldev-lint-find-files-absolute)
 ```
 
-Then we ask Eldev to use [gonewest818/elisp-lint](https://github.com/gonewest818/elisp-lint/) for linting and configure it a little bit.
+Then we ask Eldev to use [gonewest818/elisp-lint](https://github.com/gonewest818/elisp-lint/) for linting and configure it slightly.
 
 ``` commonlisp
 ;; Use elisp-lint by default
@@ -451,7 +451,7 @@ Then we ask Eldev to use [gonewest818/elisp-lint](https://github.com/gonewest818
 (setq sentence-end-double-space nil)
 ```
 
-What I love about [gonewest818/elisp-lint](https://github.com/gonewest818/elisp-lint/) is that it combines multiple linters, including [purcell/package-lint](https://github.com/purcell/package-lint). While `package-lint` is a useful linter, it enforces naming convention which I don't agree with when it comes to Emacs configurations. E.g. it wants every function in `lib-vulpea.el` to have a prefix `lib-vulpea`. While in general it makes sense, I want to avoid `lib` part here. The same goes for `init` and `config` stuff. So we intrusively change that rule:
+What I love about [gonewest818/elisp-lint](https://github.com/gonewest818/elisp-lint/) is that it combines multiple linters, including [purcell/package-lint](https://github.com/purcell/package-lint). Whilst `package-lint` is a useful linter, it enforces a naming convention which I don't agree with when it comes to Emacs configurations. For example, it wants every function in `lib-vulpea.el` to have a prefix `lib-vulpea`. Whilst in general this makes sense, I want to avoid the `lib` part here. The same goes for `init` and `config` stuff. So we intrusively change that rule:
 
 ``` commonlisp
 ;; In general, `package-lint' is useful. But package prefix naming
@@ -500,7 +500,7 @@ $ eldev clean autoloads
 $ eldev build :autoloads
 ```
 
-This generates `lisp/init-autoloads.el` file. And in case you were wondering bout its content, then it looks like this:
+This generates the `lisp/init-autoloads.el` file. And in case you were wondering about its content, it looks like this:
 
 ``` commonlisp
 ;;; init-autoloads.el --- automatically extracted autoloads  -*- lexical-binding: t -*-
@@ -581,13 +581,13 @@ Show main `org-agenda' view." t nil)
 ;;; init-autoloads.el ends here
 ```
 
-As you can see, it uses `autoload` to define a symbol (function or variable) and where to load it from. It also sets up indentation based on `decalre` from the body of function. And all constants are embedded as is, they are not getting autoloaded.
+As you can see, it uses `autoload` to define a symbol (function or variable) and where to load it from. It also sets up indentation based on `declare` from the body of the function. All constants are embedded as-is - they don't get autoloaded.
 
 Please note that `eldev` commands need to be run with working directory pointing to the directory containing `Eldev` file, e.g. from `$XDG_CONFIG_HOME/emacs` or `$HOME/.config/emacs`.
 
 # Compiling
 
-The second operation in the bootstrap process is byte compilation. It is said that byte compiled lisp executes [faster](https://www.gnu.org/software/emacs/manual/html_node/elisp/Speed-of-Byte_002dCode.html), but there is also an experimental branch for native compilation called [gccemacs](https://akrl.sdf.org/gccemacs.html), which is also available via [emacs-plus](https://github.com/d12frosted/homebrew-emacs-plus/#gccemacs). Another aspect of byte compilation is… well [compilation](https://www.gnu.org/software/emacs/manual/html_node/elisp/Compilation-Functions.html) which produces valuable [warnings and errors](https://www.gnu.org/software/emacs/manual/html_node/elisp/Compiler-Errors.html). In our setup it is very easy to compile all our `.el` files.
+The second operation in the bootstrap process is byte compilation. It's said that byte-compiled Lisp executes [faster](https://www.gnu.org/software/emacs/manual/html_node/elisp/Speed-of-Byte_002dCode.html), but there's also an experimental branch for native compilation called [gccemacs](https://akrl.sdf.org/gccemacs.html), which is also available via [emacs-plus](https://github.com/d12frosted/homebrew-emacs-plus/#gccemacs). Another aspect of byte compilation is… well, [compilation](https://www.gnu.org/software/emacs/manual/html_node/elisp/Compilation-Functions.html), which produces valuable [warnings and errors](https://www.gnu.org/software/emacs/manual/html_node/elisp/Compiler-Errors.html). In our setup, it's very easy to compile all our `.el` files.
 
 ``` bash
 $ eldev clean elc
@@ -598,7 +598,7 @@ That's it.
 
 # Linting
 
-The third step of the bootstrap process is linting. Once everything compiles we just need to check what linter has to say. Just to remind, we are using [gonewest818/elisp-lint](https://github.com/gonewest818/elisp-lint/). As you might already figured, with Eldev this step as trivial as
+The third step of the bootstrap process is linting. Once everything compiles, we just need to check what the linter has to say. Just to remind you, we're using [gonewest818/elisp-lint](https://github.com/gonewest818/elisp-lint/). As you've probably figured, with Eldev this step is as trivial as
 
 ``` bash
 $ eldev lint
@@ -606,7 +606,7 @@ $ eldev lint
 
 # Testing
 
-And the last step of the bootstrap process is testing, which has two steps. First we simply load our configurations and make sure that nothing errors out and then we run test cases, for which we are using [jorgenschaefer/emacs-buttercup](https://github.com/jorgenschaefer/emacs-buttercup) test framework. Interaction with eldev is trivial, again.
+The last step of the bootstrap process is testing, which has two stages. First, we simply load our configurations and make sure that nothing errors out. Then we run test cases, for which we're using the [jorgenschaefer/emacs-buttercup](https://github.com/jorgenschaefer/emacs-buttercup) test framework. Interaction with Eldev is trivial, again.
 
 ``` commonlisp
 $ eldev exec t
@@ -705,7 +705,7 @@ test:
 
 # org-roam
 
-In addition, I love to build [org-roam](https://github.com/org-roam/org-roam/) and [vino](https://github.com/d12frosted/vino) databases during bootstrap process, so I don't spend time on this when I use Emacs. For this I have defined the following function in my `lib-vulpea` file.
+In addition, I like to build [org-roam](https://github.com/org-roam/org-roam/) and [vino](https://github.com/d12frosted/vino) databases during the bootstrap process, so I don't spend time on this when I'm using Emacs. For this, I've defined the following function in my `lib-vulpea` file.
 
 ``` commonlisp
 ;;;###autoload
@@ -747,7 +747,7 @@ roam:
 
 # eru
 
-And the last yet optional bit of the whole puzzle is [Eru](https://github.com/d12frosted/environment#eru-domain), a script I use to setup and maintain my environment. I have it in my `PATH`, so I can rely on its might whenever I am. In short, I have the following commands:
+The last, yet optional, bit of the whole puzzle is [Eru](https://github.com/d12frosted/environment#eru-domain), a script I use to set up and maintain my environment. I have it in my `PATH`, so I can rely on its might wherever I am. In short, I have the following commands:
 
 ``` bash
 $ eru install emacs # autoloads, compile, lint, roam
@@ -821,6 +821,6 @@ $ chmod +x ~/.local/bin/emacs-eru
 
 # What's next
 
-Tinkering with Emacs, of course! This is an endless effort, constant struggle but most importantly, divine pleasure. On a serious note, I would love to cover most critical parts with tests and integrate [emacs-elsa/Elsa](https://github.com/emacs-elsa/Elsa) into my flow. And I would love to hear from you, how do you approach safety problem of your `emacs.d`?
+Tinkering with Emacs, of course! This is an endless effort, a constant struggle, but most importantly, divine pleasure. On a serious note, I'd love to cover the most critical parts with tests and integrate [emacs-elsa/Elsa](https://github.com/emacs-elsa/Elsa) into my flow. And I'd love to hear from you: how do you approach the safety problem of your `emacs.d`?
 
 Safe travels!
