--- a/src/public/content/posts/2022-07-14-vulpea-0.3.md
+++ b/src/public/content/posts/2022-07-14-vulpea-0.3.md
@@ -1,8 +1,8 @@
 <img src="/images/2022-07-14-vulpea-0.3/2022-07-20-09-51-46-vulpea-logo.webp" class="d12-image-1/2" />
 
-The time has come to release a new version of [Vulpea](https://github.com/d12frosted/vulpea), a collection of note-taking functions based on Org and Org Roam. Almost a year has passed since the release of v0.2. Over this time, Vulpea got several major features that deserve a dedicated version. In truth, I wanted to release it almost half a year ago, but the war kicked in, and I had more important things to focus on.
+The time has come to release a new version of [Vulpea](https://github.com/d12frosted/vulpea), a collection of note-taking functions based on Org and Org Roam. Almost a year has passed since the release of v0.2. Over this time, Vulpea has received several major features that deserve a dedicated version. In truth, I wanted to release it almost half a year ago, but the war kicked in, and I had more important things to focus on.
 
-The main focus of this release is the [performance of query operations](https://github.com/d12frosted/vulpea#query-from-database). Expect a 4.5x speed boost for generic `vulpea-db-query` and even more with specialized queries. All that thanks to materialized view table for notes.
+The main focus of this release is the [performance of query operations](https://github.com/d12frosted/vulpea#query-from-database). Expect a 4.5x speed boost for generic `vulpea-db-query` and even more with specialised queries. All that thanks to a materialised view table for notes.
 
 | test          | result size | [regular](https://github.com/d12frosted/vulpea/blob/551495a59fb8c3bcd49a091b233e24e4cb8b584c/vulpea-db.el#L76-L187) | view table         | ratio     |
 |---------------|-------------|---------------------------------------------------------------------------------------------------------------------|--------------------|-----------|
@@ -22,21 +22,21 @@ The main focus of this release is the [performance of query operations](https://
 
 specialized queries performance on a set of 9554 notes (in seconds)
 
-Checkout [CHANGELOG](https://github.com/d12frosted/vulpea/blob/master/CHANGELOG.org) for full list of changes. Read further to learn details.
+Check out [CHANGELOG](https://github.com/d12frosted/vulpea/blob/master/CHANGELOG.org) for a full list of changes. Read further to learn the details.
 
 <!--more-->
 
 # Materialized view table
 
-Materialized view table, huh? The concept is actually pretty simple. But first, you need to understand how Org Roam DB is designed.
+Materialised view table, huh? The concept is actually pretty simple. But first, you need to understand how Org Roam DB is designed.
 
 Under the hood, Org Roam uses SQLite with 7 different tables. Each table stores various information about every single note. There is a table with 'node' information like title, level, properties, etc. But tags, aliases, and links are stored in separate tables. And you have to query data from all these tables to get a fully populated note. It [becomes messy](https://github.com/org-roam/org-roam/commit/a199886ef7ae208b0b10dc45e0df9b54d210cd4d) and slow if you need to get lots of fully populated notes.
 
-I won't go too much into detail explaining [how it worked previously in Vulpea](https://github.com/d12frosted/vulpea/commit/e2e82fb1288e68f4b84fcd003226fd053677e6c2#diff-45d792d2854eb88fa849977354fe467f09e47c0ca44a51ff5c5b2e1276725a40) and [how it still works in Org Roam](https://github.com/org-roam/org-roam/blob/c3867619147175faf89ed8f3e90a1e67a4fd9655/org-roam-node.el#L337-L405). That deserves a separate post that can be based on my conversation with Jörg Volbers. In short, it uses a trick to multiply all needed tables into one big table. Definitely not my proudest contribution. But most importantly, it is [error-prone](https://github.com/org-roam/org-roam/commit/a199886ef7ae208b0b10dc45e0df9b54d210cd4d#r52949692) and slow.
+I won't go into too much detail explaining [how it worked previously in Vulpea](https://github.com/d12frosted/vulpea/commit/e2e82fb1288e68f4b84fcd003226fd053677e6c2#diff-45d792d2854eb88fa849977354fe467f09e47c0ca44a51ff5c5b2e1276725a40) and [how it still works in Org Roam](https://github.com/org-roam/org-roam/blob/c3867619147175faf89ed8f3e90a1e67a4fd9655/org-roam-node.el#L337-L405). That deserves a separate post that can be based on my conversation with Jörg Volbers. In short, it uses a trick to multiply all needed tables into one big table. Definitely not my proudest contribution. But most importantly, it is [error-prone](https://github.com/org-roam/org-roam/commit/a199886ef7ae208b0b10dc45e0df9b54d210cd4d#r52949692) and slow.
 
 After [adding links](https://github.com/d12frosted/vulpea/commit/e2e82fb1288e68f4b84fcd003226fd053677e6c2) to the `vulpea-note`, I realised that `vulpea-db-query` became too slow for my collection of notes. And so I decided to add an extra table, where every row contains a fully materialised/populated note. This simple idea provided a 4.5x performance boost to all functions using `vulpea-db-query`.
 
-This is a game changer with only one downside - write performance degradation. Of course, we write the same data twice - in Org Roam tables and then in materialised view table. But there is more to writing performance degradation. It is hard to hook into Org Roam parsing and writing routine, so I had to duplicate buffer parsing. And this is the biggest performance offender. In most cases, when you simply modify a single note, this is hardly noticeable. But syncing 9k notes takes x2 time.
+This is a game-changer with only one downside - write performance degradation. Of course, we write the same data twice - in Org Roam tables and then in the materialised view table. But there's more to the writing performance degradation. It's hard to hook into the Org Roam parsing and writing routine, so I had to duplicate buffer parsing. And this is the biggest performance offender. In most cases, when you simply modify a single note, this is hardly noticeable. But syncing 9k notes takes x2 time.
 
 | test        | regular            | view table     | diff         | ratio     |
 |-------------|--------------------|----------------|--------------|-----------|
@@ -47,15 +47,15 @@ This is a game changer with only one downside - write performance degradation. O
 
 synchronisation performance (in seconds)
 
-This penalty can be omitted if [materialised view table becomes part of Org Roam](https://github.com/org-roam/org-roam/issues/1997). Alternatively, the Org Roam routine can benefit from refactoring to enable this kind of hook without any performance loss. Do I plan to work in this direction? Definitely! But I feel a lack of motivation and resources to promise anything.
+This penalty can be omitted if the [materialised view table becomes a part of Org Roam](https://github.com/org-roam/org-roam/issues/1997). Alternatively, the Org Roam routine can benefit from refactoring to enable this kind of hook without any performance loss. Do I plan to work in this direction? Definitely! But I feel a lack of motivation and resources to promise anything.
 
 See [vulpea#116](https://github.com/d12frosted/vulpea/pull/116) for benchmarks.
 
-# Specialized queries
+# Specialised queries
 
-As I already mentioned, all this performance mumbo jumbo started because of [the inclusion of links](https://github.com/d12frosted/vulpea/discussions/106) to `vulpea-note`. I literally was [disappointed](https://github.com/d12frosted/vulpea/discussions/106#discussioncomment-1601429) with the performance. And I decided to take the path of least resistance and provided some specialized queries (because they kind of solve the problem for my most used patterns).
+As I already mentioned, all this performance mumbo jumbo started because of [the inclusion of links](https://github.com/d12frosted/vulpea/discussions/106) to `vulpea-note`. I literally was [disappointed](https://github.com/d12frosted/vulpea/discussions/106#discussioncomment-1601429) with the performance, and I decided to take the path of least resistance and provided some specialised queries (because they kind of solve the problem for my most-used patterns).
 
-What are the most used patterns? Get the list of notes tagged by all/any given tags. Get the list of notes linking to all/any given notes.
+What are the most-used patterns? Get the list of notes tagged by all/any given tags. Get the list of notes linking to all/any given notes.
 
 - `vulpea-db-query-by-tags-some` - return all notes tagged with one of the provided `TAGS`.
 - `vulpea-db-query-by-tags-every` - return all notes tagged by every tag from the list of provided `TAGS`.
@@ -72,7 +72,7 @@ These are [benchmark](https://github.com/d12frosted/vulpea/discussions/106#discu
 
 query by links performance (in seconds)
 
-What exactly makes specialized queries so fast? We start by narrowing down all notes in the fastest possible way. And then, we exchange this list of ids to list of notes in a single transaction.
+What exactly makes specialised queries so fast? We start by narrowing down all notes in the fastest possible way. Then, we exchange this list of IDs for a list of notes in a single transaction.
 
 ## `*-some`
 
@@ -84,13 +84,13 @@ from tags
 where tag in ('"wine"', '"barberry/public"');
 ```
 
-Ignore serialisation of the string data. It is related to [emacsql limitations](https://github.com/skeeto/emacsql#limitations).
+Ignore the serialisation of the string data. It is related to [emacsql limitations](https://github.com/skeeto/emacsql#limitations).
 
-Now that we have the list of ids, we can get list of notes in one transaction by using `vulpea-db-query-by-ids`.
+Now that we have the list of IDs, we can get a list of notes in one transaction by using `vulpea-db-query-by-ids`.
 
 ## `*-every`
 
-We use [INTERSECT operator](https://www.sqlite.org/lang_select.html#compound_select_statements) to get notes tagged by all provided tags. Looks more tricky than `IN` operator, but the idea is simple. We find a list of notes tagged by first tag, a list of notes tagged by second tag, a list of notes tagged by third tag, and so on… And then we calculate intersection of these lists. Voilà!
+We use the [INTERSECT operator](https://www.sqlite.org/lang_select.html#compound_select_statements) to get notes tagged by all provided tags. Looks trickier than the `IN` operator, but the idea is simple. We find a list of notes tagged by the first tag, a list of notes tagged by the second tag, a list of notes tagged by the third tag, and so on… And then we calculate the intersection of these lists. Voilà!
 
 ``` sql
 select distinct node_id
@@ -106,7 +106,7 @@ where tag = '"barberry/public"'
 ;
 ```
 
-Now that we have the list of ids, we can get list of notes in one transaction by using `vulpea-db-query-by-ids`.
+Now that we have the list of IDs, we can get a list of notes in one transaction by using `vulpea-db-query-by-ids`.
 
 # Other goodies
 
@@ -117,17 +117,17 @@ Now that we have the list of ids, we can get list of notes in one transaction by
   - `vulpea-note-meta-get` - to get the first value of given `PROP` and `TYPE`.
 - New function to remove buffer properties - `vulpea-buffer-prop-remove`.
 - Improve `filetags` handling:
-  - Property format them with `:` as separator;
-  - Remove property when setting them to empty list instead of leaving empty property.
-- Allow to configure candidates source for `vulpea-find` function via `vulpea-find-default-candidates-source` variable.
-- New function to select from arbitrary list of notes as opposed to relying on filter - `vulpea-select-from`.
+  - Properties format them with `:` as separator;
+  - Remove the property when setting them to an empty list instead of leaving an empty property.
+- Allow configuring the candidates source for the `vulpea-find` function via the `vulpea-find-default-candidates-source` variable.
+- New function to select from an arbitrary list of notes as opposed to relying on a filter - `vulpea-select-from`.
 - Add shortcuts for checking tags on the note:
   - `vulpea-note-tagged-all-p` - return non-nil if a `NOTE` is tagged by all of the `TAGS`.
   - `vulpea-note-tagged-any-p` - return non-nil if a `NOTE` is tagged by any of the `TAGS`.
 
 # Next steps
 
-Vulpea already offers a lot of features. While working on other projects that use Vulpea, I discover new missing features that I would love to implement. And issue tracker is not empty. Unless something changes, my plan is the following.
+Vulpea already offers a lot of features. Whilst working on other projects that use Vulpea, I discover new missing features that I would love to implement. And the issue tracker is not empty. Unless something changes, my plan is the following:
 
 1.  Add attachment directory path to `vulpea-note`. This is needed to boost [barberry.io](https://barberry.io) construction, so I prioritise this simple feature.
 2.  Provide a simple way to add more tables to org-roam-db and improve their initialisation flow.
