--- a/src/public/content/posts/2025-11-25-nix.md
+++ b/src/public/content/posts/2025-11-25-nix.md
@@ -12,7 +12,7 @@ I'm not alone here. The [2022 Nix community survey](https://discourse.nixos.org/
 
 When the community response to "this is hard to learn" is "here's an AI to help you understand the error messages", maybe we've got a problem.
 
-I tried writing my own packages a few times. It was **super** complex. Maybe I'm just a bad citizen of the Nix ecosystem - I never really learned the language extensively, only the basics, because frankly I didn't feel like learning it. But here's the thing: I don't think it's reasonable for a package manager to require users to learn a whole new language just to edit configuration files.
+I tried writing my own packages a few times. It was **super** complex. Maybe I'm just a bad citizen of the Nix ecosystem - I never really learned the language extensively, only the basics, because frankly I didn't feel like learning it. But I don't think it's reasonable for a package manager to require users to learn a whole new language just to edit configuration files.
 
 # The Reproducibility Myth (on macOS)
 
@@ -101,7 +101,7 @@ I'm bad at remembering complex commands, so I wrap everything in something I can
 
 # Tools Exist to Solve Problems, Not as Goals
 
-Here's the thing: I'm not an idealist. I respect that there are idealistic zealots out there building amazing things like Nix. The engineering behind it is fascinating, and the vision is compelling.
+I'm not an idealist. I respect that there are idealistic zealots out there building amazing things like Nix. The engineering behind it is fascinating, and the vision is compelling.
 
 But tools exist to solve problems. Tools are not the goal themselves.
 
